Update for wiped repo

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     style="background-image: url('./images/post-constuction-cleaning.webp');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
-                    <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Office Clean</h3>
+                    <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Post Constrction Clean</h3>
                     <p class="text-sm text-gray-200 leading-relaxed">We help businesses maintain a fresh, tidy, and welcoming workspace.</p>
                 </div>
                 <button class="absolute bottom-6 right-6 bg-blue-600 p-3 rounded-full text-white opacity-0 group-hover:opacity-100 translate-y-3 group-hover:translate-y-0 transition-all duration-300 shadow-md hover:shadow-blue-400/60">
