--- a/care-clean.html
+++ b/care-clean.html
@@ -536,98 +536,135 @@
 
     <!-- FOOTER SECTION -->
     <footer class="bg-blue-900 text-white py-16 px-8 font-poppins">
-        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
 
             <!-- COMPANY INFO -->
-        <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
-        <!-- IMAGE ABOVE HEADING -->
-        <img 
-            src="./images/wiped-logo.png" 
-            alt="Cleaning Service Icon" 
-            class="w-20 h-20 mb-5 object-contain"
-        />
+            <div class="text-center flex flex-col items-center">
+                <!-- IMAGE ABOVE HEADING -->
+                <img 
+                    src="./images/wiped-logo.png" 
+                    alt="Cleaning Service Icon" 
+                    class="w-40 h-20 mb-5 object-contain mx-auto"
+                />
 
-        <!-- HEADING -->
-        <h2 class="text-2xl md:text-3xl font-semibold mb-4 text-white">
-            Our Goal is to Wow You With Every Clean
-        </h2>
+                <!-- HEADING -->
+                <h2 class="text-2xl md:text-3xl font-semibold mb-4 text-white text-center">
+                    Our Goal is to Wow You With Every Clean
+                </h2>
 
-        <!-- BUTTON -->
-        <button class="flex items-center gap-2 bg-blue-600 text-white px-6 py-3 rounded-full font-medium shadow-md hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all duration-300">
-            Get a Free Quote
-            <span class="material-icons text-white text-lg">arrow_forward</span>
-        </button>
-        </div>
+                <!-- BUTTON -->
+                <a href="https://yourbookinglink.com">
+                    <button class="flex items-center gap-2 bg-blue-600 text-white px-6 py-3 rounded-full font-medium shadow-md hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all duration-300">
+                        Book Now
+                        <span class="material-icons text-white text-lg">arrow_forward</span>
+                    </button>
+                </a>
+            </div>
 
+            <!-- OUR SERVICES -->
+            <div>
+                <h3 class="text-xl font-semibold mb-4">Our Services</h3>
+                <ul class="space-y-3 text-gray-300">
+                    <li>
+                        <a href="care-clean.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">home</span>
+                            Care Clean
+                        </a>
+                    </li>
+                    <li>
+                        <a href="deep-clean.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">cleaning_services</span>
+                            Deep Cleaning
+                        </a>
+                    </li>
+                    <li>
+                        <a href="recurring-clean.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">schedule</span>
+                            Recurring Clean
+                        </a>
+                    </li>
+                    <li>
+                        <a href="move-in-out.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">moving</span>
+                            Move In/Out Clean
+                        </a>
+                    </li>
+                    <li>
+                        <a href="post-construction.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">construction</span>
+                            Post Construction
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
-        <!-- OUR SERVICES -->
-        <div>
-            <h3 class="text-xl font-semibold mb-4">Our Services</h3>
-            <ul class="space-y-3 text-gray-300">
-                <li>
-                    <a href="#" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
-                        <span class="material-icons text-blue-400 text-lg">home</span>
-                        Care Clean
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
-                        <span class="material-icons text-blue-400 text-lg">cleaning_services</span>
-                        Deep Cleaning
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
-                        <span class="material-icons text-blue-400 text-lg">schedule</span>
-                        Recurring Clean
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
-                        <span class="material-icons text-blue-400 text-lg">moving</span>
-                        Move In/Out Clean
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
-                        <span class="material-icons text-blue-400 text-lg">construction</span>
-                        Post Construction
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <!-- QUICK LINKS -->
+            <div>
+                <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
+                <ul class="space-y-3 text-gray-300">
+                    <li>
+                        <a href="about.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">info</span>
+                            About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">call</span>
+                            Contact
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">arrow_forward</span>
+                            Book Now
+                        </a>
+                    </li>
+                    <li>
+                        <a href="blog.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                            <span class="material-icons text-blue-400 text-lg">rss_feed</span>
+                            Blog
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
 
             <!-- CONTACT INFO + FOLLOW US -->
             <div>
-            <h3 class="text-xl font-semibold mb-4">Contact Info</h3>
-            <ul class="space-y-3 text-gray-300 mb-6">
-                <li class="flex items-center gap-2">
-                <span class="material-icons text-blue-400">call</span>
-                <span>306-800-0114</span>
-                </li>
-                <li class="flex items-center gap-2">
-                <span class="material-icons text-blue-400">email</span>
-                <span>admin1112@wipedcleaning.com</span>
-                </li>
-                <li class="flex items-center gap-2">
-                <span class="material-icons text-blue-400">location_on</span>
-                <span>Regina, Saskatchewan, Canada</span>
-                </li>
-            </ul>
+                <h3 class="text-xl font-semibold mb-4">Contact Info</h3>
+                <ul class="space-y-3 text-gray-300 mb-6">
+                    <li class="flex items-center gap-2">
+                        <span class="material-icons text-blue-400">call</span>
+                        <span>+1 (639) 382 - 1688</span>
+                    </li>
+                    <li class="flex items-center gap-2">
+                        <span class="material-icons text-blue-400">email</span>
+                        <span>admin@wipedcleaningsrvcs.com</span>
+                    </li>
+                    <li class="flex items-center gap-2">
+                        <span class="material-icons text-blue-400">location_on</span>
+                        <span>Regina, Saskatchewan, Canada</span>
+                    </li>
+                    <li class="flex items-center gap-2">
+                        <span class="material-icons text-blue-400">schedule</span>
+                        <span>Business Hours: Monday - Sunday, 9:00 AM - 6:00 PM</span>
+                    </li>
+                </ul>
 
-            <!-- FOLLOW US -->
-            <h3 class="text-xl font-semibold mb-4">Follow Us</h3>
-            <div class="flex gap-4">
-                <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
-                <span class="material-icons">facebook</span>
-                </a>
-                <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
-                <span class="material-icons">photo_camera</span> <!-- Instagram -->
-                </a>
-                <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
-                <span class="material-icons">public</span> <!-- X/Twitter -->
-                </a>
-            </div>
+                <!-- FOLLOW US -->
+                <h3 class="text-xl font-semibold mb-4">Follow Us</h3>
+                <div class="flex gap-4">
+                    <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
+                        <span class="material-icons">facebook</span>
+                    </a>
+                    <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
+                        <span class="material-icons">photo_camera</span> <!-- Instagram -->
+                    </a>
+                    <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
+                        <span class="material-icons">public</span> <!-- X/Twitter -->
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -636,7 +673,6 @@
             © Copyright 2025. All Rights Reserved.
         </div>
     </footer>
-
 
 
     <script>
