--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.jpg" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -166,7 +166,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-constuction-cleaning.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./images/post-constuction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -257,7 +257,7 @@
             <!-- CARD 2 -->
             <div class="group relative overflow-hidden rounded-2xl border border-white/30 backdrop-blur-sm bg-white/10 shadow-2xl hover:shadow-blue-500/30 transition-all duration-500 cursor-pointer h-96">
                 <div class="absolute inset-0 bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
-                    style="background-image: url('./images/deep-clean.webp');"></div>
+                    style="background-image: url('./images/deep-clean.jpg');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
                     <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Deep Clean</h3>
