Update for wiped repo

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-constuction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -305,7 +305,7 @@
                     style="background-image: url('./images/post-construction-clean.webp');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
-                    <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Post Constrction Clean</h3>
+                    <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Post Construction Clean</h3>
                     <p class="text-sm text-gray-200 leading-relaxed">We help businesses maintain a fresh, tidy, and welcoming workspace.</p>
                 </div>
                 <button class="absolute bottom-6 right-6 bg-blue-600 p-3 rounded-full text-white opacity-0 group-hover:opacity-100 translate-y-3 group-hover:translate-y-0 transition-all duration-300 shadow-md hover:shadow-blue-400/60">
