--- a/care-clean.html
+++ b/care-clean.html
@@ -479,36 +479,36 @@
     </section>
 
     <section class="relative py-20 px-6 bg-gray-50">
-    <div class="max-w-6xl mx-auto flex flex-col md:flex-row gap-10">
-        <!-- Left Card -->
-        <div class="md:w-1/2 bg-white rounded-2xl shadow-lg p-10 hover:shadow-2xl transition-shadow duration-300 animate-fadeInLeft">
-            <div class="flex items-center mb-6">
-                <span class="material-symbols-rounded text-blue-500 text-3xl mr-3">home</span>
-                <h3 class="text-2xl font-bold text-gray-900">Every Home is Unique</h3>
+        <div class="max-w-6xl mx-auto flex flex-col md:flex-row gap-10">
+            <!-- Left Card -->
+            <div class="md:w-1/2 bg-white rounded-2xl shadow-lg p-10 hover:shadow-2xl transition-shadow duration-300 animate-fadeInLeft">
+                <div class="flex items-center mb-6">
+                    <span class="material-symbols-rounded text-blue-500 text-3xl mr-3">home</span>
+                    <h3 class="text-2xl font-bold text-gray-900">Every Home is Unique</h3>
+                </div>
+                <p class="text-gray-700 mb-4 leading-relaxed">
+                    At WIPED Cleaning Services, we understand that no two homes are the same. Each cleaning is fully customized to fit your space and needs. Our experienced cleaners focus on what matters most in your home.
+                </p>
+                <p class="text-gray-700 leading-relaxed">
+                    Have specific requests? Let us know! Communicate your priorities or special instructions at the start of your appointment to get exactly what you need.
+                </p>
             </div>
-            <p class="text-gray-700 mb-4 leading-relaxed">
-                At WIPED Cleaning Services, we understand that no two homes are the same. Each cleaning is fully customized to fit your space and needs. Our experienced cleaners focus on what matters most in your home.
-            </p>
-            <p class="text-gray-700 leading-relaxed">
-                Have specific requests? Let us know! Communicate your priorities or special instructions at the start of your appointment to get exactly what you need.
-            </p>
-        </div>
 
-        <!-- Right Card -->
-        <div class="md:w-1/2 bg-white rounded-2xl shadow-lg p-10 hover:shadow-2xl transition-shadow duration-300 animate-fadeInRight">
-            <div class="flex items-center mb-6">
-                <span class="material-symbols-rounded text-blue-500 text-3xl mr-3">thumb_up</span>
-                <h3 class="text-2xl font-bold text-gray-900">Our Promise: 100% Satisfaction</h3>
+            <!-- Right Card -->
+            <div class="md:w-1/2 bg-white rounded-2xl shadow-lg p-10 hover:shadow-2xl transition-shadow duration-300 animate-fadeInRight">
+                <div class="flex items-center mb-6">
+                    <span class="material-symbols-rounded text-blue-500 text-3xl mr-3">thumb_up</span>
+                    <h3 class="text-2xl font-bold text-gray-900">Our Promise: 100% Satisfaction</h3>
+                </div>
+                <p class="text-gray-700 mb-4 leading-relaxed">
+                    We don’t leave until your space looks amazing. Our job isn’t done until you’re completely satisfied with the cleanliness and comfort of your home.
+                </p>
+                <p class="text-gray-700 leading-relaxed">
+                    Still deciding? Let’s chat. Call us with questions or book directly through our simple online system. You can reschedule, update services, or cancel anytime — easy, flexible, and stress-free.
+                </p>
             </div>
-            <p class="text-gray-700 mb-4 leading-relaxed">
-                We don’t leave until your space looks amazing. Our job isn’t done until you’re completely satisfied with the cleanliness and comfort of your home.
-            </p>
-            <p class="text-gray-700 leading-relaxed">
-                Still deciding? Let’s chat. Call us with questions or book directly through our simple online system. You can reschedule, update services, or cancel anytime — easy, flexible, and stress-free.
-            </p>
         </div>
-    </div>
-</section>
+    </section>
 
 
     <section class="relative bg-blue-600 text-white py-20 px-6">
@@ -531,6 +531,187 @@
                 Book Now
                 <span class="material-symbols-rounded text-lg">arrow_forward</span>
             </a>
+        </div>
+    </section>
+
+    <section class="bg-gray-50 py-24 px-8">
+        <div class="max-w-6xl mx-auto">
+            <!-- Section Header -->
+            <h2 class="text-4xl md:text-5xl font-bold text-blue-700 mb-6 text-center">FAQs: Care Clean</h2>
+            <p class="text-gray-600 text-lg mb-12 text-center">
+            Find answers to the most common questions about our cleaning services, scheduling, and pricing.
+            </p>
+
+            <!-- FAQ Grid: Two Columns -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+            <!-- FAQ ITEM 1 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Do I need to be home for my cleaning?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Not necessarily! Many clients provide access instructions. Your property remains secure at all times.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 2 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">What’s the fastest way to clean a house professionally?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Our professional teams use systematic methods and specialized equipment to clean efficiently and thoroughly.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 3 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">How much does a cleaning cost?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Pricing depends on your home’s size, services requested, and frequency. Contact us or use our online booking form for an estimate.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 4 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">How long does a cleaning take?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Most cleanings take 2–5 hours depending on the size and condition of your home.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 5 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Is there a discount for regular service?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Yes! We offer discounted rates for recurring cleaning schedules.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 6 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Are there discounts for skipping certain rooms?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                You can customize your cleaning plan, and we can provide adjusted pricing if some rooms are skipped.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 7 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">How many people come to clean?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Typically, 1–3 professionals depending on the size of your home and services requested.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 8 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Will I have the same team every time?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                We strive to provide the same team for consistency and familiarity with your home.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 9 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Do you clean larger homes?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Yes! We have teams equipped to handle homes of all sizes.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 10 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Is your company insured?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Yes, we are fully insured for your peace of mind.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 11 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Can I cancel my appointment if I change my mind?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Yes, cancellations are allowed up to 24 hours before your scheduled appointment.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 12 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">When will my card be charged?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Your card will be charged once your booking is confirmed online or by phone.
+                </p>
+            </div>
+
+            <!-- FAQ ITEM 13 -->
+            <div class="group border border-gray-200 rounded-2xl p-6 hover:shadow-lg transition-all duration-300 cursor-pointer">
+                <div class="flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-gray-800 group-hover:text-blue-600 transition">Do I have to leave a tip?</h3>
+                <span class="material-icons text-gray-400 group-hover:text-blue-600 transition">keyboard_arrow_down</span>
+                </div>
+                <p class="text-gray-600 mt-2 max-h-0 overflow-hidden group-hover:max-h-40 transition-all duration-500 ease-in-out">
+                Tips are optional but always appreciated by our cleaning professionals.
+                </p>
+            </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- DON’T WAIT BANNER WITH WHITE BACKGROUND -->
+    <section class="bg-white text-gray-900 py-20">
+        <div class="max-w-6xl mx-auto px-6 md:px-16 lg:px-24 text-center space-y-6">
+            <h2 class="text-4xl md:text-5xl font-extrabold text-blue-900">
+                Don’t Wait
+            </h2>
+            <p class="text-lg md:text-xl">
+                If you are tired of doing cleaning tasks all on your own and done with DIY cleaning tips that only work about half the time, take back the war on those dust bunnies and book your <span class="font-semibold text-blue-700">Care Clean</span> with WIPED today!
+            </p>
+            <p class="text-lg md:text-xl">
+                We’re always happy to help and looking forward to hearing from you!
+            </p>
+            <div class="mt-6">
+                <a href="contact.html" class="inline-flex items-center gap-2 bg-blue-600 text-white px-8 py-4 rounded-full font-medium shadow-md hover:bg-blue-700 transition-all duration-300">
+                    Book Now
+                    <span class="material-icons text-lg">
+                    arrow_forward
+                    </span>
+                </a>
+            </div>
         </div>
     </section>
 
