Update for wiped repo

--- a/care-clean.html
+++ b/care-clean.html
@@ -250,7 +250,7 @@
                 <div>
                 <h3 class="text-xl font-semibold mb-2">Flexible & Efficient</h3>
                 <p class="text-gray-800 leading-relaxed">
-                    Whether you live in a 500 sq. ft. apartment or a 5,000 sq. ft. home, we clean spaces of all shapes and sizes—houses, condos, townhomes, and apartments. Need a few odd jobs done? Our hourly service has you covered.
+                    Whether you live in a 500 sq. ft. apartment or a 5,000 sq. ft. home, we clean spaces of all shapes and sizes houses, condos, townhomes, and apartments. Need a few odd jobs done? Our hourly service has you covered.
                 </p>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                 <div>
                 <h3 class="text-xl font-semibold mb-2">Satisfaction Guaranteed</h3>
                 <p class="text-gray-800 leading-relaxed">
-                    Finding a trustworthy cleaner can be tough. We carefully select only the best, most reliable professionals. With our 200% satisfaction guarantee, we don’t just promise clean—we guarantee it.
+                    Finding a trustworthy cleaner can be tough. We carefully select only the best, most reliable professionals. With our 200% satisfaction guarantee, we don’t just promise clean we guarantee it.
                 </p>
                 </div>
             </div>
@@ -272,7 +272,7 @@
                 <div>
                 <h3 class="text-xl font-semibold mb-2">No Estimates. No Hassle.</h3>
                 <p class="text-gray-800 leading-relaxed">
-                    Forget in-person quotes or long wait times. With our flat-rate pricing, simply tell us how many bedrooms and bathrooms you have, select extras, and book online. Quick, transparent, and stress-free—just the way it should be.
+                    Forget in-person quotes or long wait times. With our flat-rate pricing, simply tell us how many bedrooms and bathrooms you have, select extras, and book online. Quick, transparent, and stress free just the way it should be.
                 </p>
                 </div>
             </div>
@@ -291,7 +291,7 @@
         <!-- Main Content -->
         <div class="relative z-10 max-w-4xl mx-auto text-center">
             <h2 class="text-4xl md:text-5xl font-extrabold mb-6 animate-fadeInDown">
-                Don’t Wait, Book Your Care Cleaning Today
+                Don’t Wait, Book Your Care Clean Today
             </h2>
             <p class="text-lg md:text-2xl mb-8 animate-fadeInUp">
                 Let WIPED handle the mess so you can enjoy a spotless home!
@@ -504,7 +504,7 @@
                     We don’t leave until your space looks amazing. Our job isn’t done until you’re completely satisfied with the cleanliness and comfort of your home.
                 </p>
                 <p class="text-gray-700 leading-relaxed">
-                    Still deciding? Let’s chat. Call us with questions or book directly through our simple online system. You can reschedule, update services, or cancel anytime — easy, flexible, and stress-free.
+                    Still deciding? Let’s chat. Call us with questions or book directly through our simple online system. You can reschedule, update services, or cancel anytime easy, flexible, and stress-free.
                 </p>
             </div>
         </div>
@@ -521,7 +521,7 @@
         <!-- Main Content -->
         <div class="relative z-10 max-w-4xl mx-auto text-center">
             <h2 class="text-4xl md:text-5xl font-extrabold mb-6 animate-fadeInDown">
-                Don’t Wait, Book Your Care Cleaning Today
+                Don’t Wait, Book Your Care Today
             </h2>
             <p class="text-lg md:text-2xl mb-8 animate-fadeInUp">
                 Let WIPED handle the mess so you can enjoy a spotless home!
