--- a/deep-clean.html
+++ b/deep-clean.html
@@ -224,7 +224,7 @@
             </p>
 
             <p class="text-lg md:text-xl text-gray-700">
-            Let’s be honest: no one wants to spend their weekend scrubbing floors and wiping baseboards. Weekends are for relaxing, spending time with family, or just enjoying a quiet moment by the pool—not cleaning for hours. You work hard, so let us handle the heavy-duty cleaning for you.
+            Let’s be honest: no one wants to spend their weekend scrubbing floors and wiping baseboards. Weekends are for relaxing, spending time with family, or just enjoying a quiet moment by the pool—not cleaning for hours. You work hard, so let us handle the heavy duty cleaning for you.
             </p>
 
             <h3 class="text-2xl font-bold text-blue-800 mt-6">
@@ -236,7 +236,7 @@
             </p>
 
             <p class="text-lg md:text-xl text-gray-700">
-            We focus on areas that collect dust over time, like baseboards, door frames, handles, and blinds—places that aren’t cleaned as often as floors or countertops. With more time and care, we make sure those easy-to-miss spots get the attention they need.
+            We focus on areas that collect dust over time, like baseboards, door frames, handles, and blinds—places that aren’t cleaned as often as floors or countertops. With more time and care, we make sure those easy to miss spots get the attention they need.
             </p>
         </div>
     </section>
@@ -252,7 +252,7 @@
         <!-- Main Content -->
         <div class="relative z-10 max-w-4xl mx-auto text-center">
             <h2 class="text-4xl md:text-5xl font-extrabold mb-6 animate-fadeInDown">
-               Don’t Wait, Book Your Deep Cleaning Cleaning Today
+               Don’t Wait, Book Your Deep Clean Today
             </h2>
             <p class="text-lg md:text-2xl mb-8 animate-fadeInUp">
                 Let WIPED handle the mess so you can enjoy a spotless home!
