Update for wiped repo

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -328,10 +328,10 @@
                 </div>
                 <div class="md:w-1/2 space-y-6">
                     <p class="text-gray-700 text-lg md:text-xl">
-                    Still thinking about whether a deep cleaning is right for you? No problem! You can give us a call — we’re happy to answer any questions you have. Not a fan of phone calls? That’s okay too! You can book your deep cleaning right through our easy online booking system.
+                    Still thinking about whether a deep cleaning is right for you? No problem! You can give us a call we’re happy to answer any questions you have. Not a fan of phone calls? That’s okay too! You can book your deep cleaning right through our easy online booking system.
                     </p>
                     <p class="text-gray-700 text-lg md:text-xl">
-                    You’re always in control — you can choose the time, add extra services, or make changes to your appointment anytime.
+                    You’re always in control you can choose the time, add extra services, or make changes to your appointment anytime.
                     </p>
                 </div>
             </div>
@@ -374,7 +374,6 @@
         </div>
     </section>
 
-
     <!-- BOOKING & FAQ SECTION -->
     <section class="py-16 bg-white">
         <div class="max-w-5xl mx-auto px-6 md:px-16 lg:px-24 space-y-16">
@@ -388,7 +387,7 @@
                     Getting started is easy. The best way to book your deep clean is through our website.
                 </p>
                 <p class="text-base md:text-lg text-gray-700">
-                    Not sure about booking online or just want to talk to a real person? Give us a call — we’re happy to help with any questions, or just chat about your day (or your cat — we love pets too!).
+                    Not sure about booking online or just want to talk to a real person? Give us a call we’re happy to help with any questions, or just chat about your day (or your cat — we love pets too!).
                 </p>
             </div>
 
@@ -444,7 +443,7 @@
         <!-- Main Content -->
         <div class="relative z-10 max-w-4xl mx-auto text-center">
             <h2 class="text-4xl md:text-5xl font-extrabold mb-6 animate-fadeInDown">
-               Don’t Wait, Book Your Deep Cleaning Cleaning Today
+               Don’t Wait, Book Your Deep Today
             </h2>
             <p class="text-lg md:text-2xl mb-8 animate-fadeInUp">
                 Let WIPED handle the mess so you can enjoy a spotless home!
@@ -571,8 +570,6 @@
     </div>
     </section>
 
-
-
     <!-- DON’T WAIT BANNER WITH WHITE BACKGROUND -->
     <section class="bg-white text-gray-900 py-20">
         <div class="max-w-6xl mx-auto px-6 md:px-16 lg:px-24 text-center space-y-6">
@@ -598,26 +595,26 @@
 
 
     <!-- FOOTER SECTION -->
-    <footer class="bg-blue-900 text-white py-16 px-8 font-poppins">
-        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
+    <footer class="bg-blue-900 text-white py-16 px-6 md:px-16 lg:px-24 font-poppins">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-10">
 
             <!-- COMPANY INFO -->
-            <div class="text-center flex flex-col items-center">
-                <!-- IMAGE ABOVE HEADING -->
+            <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
+                <!-- LOGO -->
                 <img 
                     src="./images/wiped-logo.png" 
                     alt="Cleaning Service Icon" 
-                    class="w-40 h-20 mb-5 object-contain mx-auto"
+                    class="w-36 h-20 mb-5 object-contain"
                 />
 
                 <!-- HEADING -->
-                <h2 class="text-2xl md:text-3xl font-semibold mb-4 text-white text-center">
+                <h2 class="text-2xl md:text-3xl font-semibold mb-4 text-white">
                     Our Goal is to Wow You With Every Clean
                 </h2>
 
                 <!-- BUTTON -->
-                <a href="https://yourbookinglink.com">
-                    <button class="flex items-center gap-2 bg-blue-600 text-white px-6 py-3 rounded-full font-medium shadow-md hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all duration-300">
+                <a href="https://yourbookinglink.com" class="mt-2 w-full sm:w-auto">
+                    <button class="flex items-center justify-center gap-2 bg-blue-600 text-white px-6 py-3 rounded-full font-medium shadow-md hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all duration-300 w-full sm:w-auto">
                         Book Now
                         <span class="material-icons text-white text-lg">arrow_forward</span>
                     </button>
@@ -626,34 +623,34 @@
 
             <!-- OUR SERVICES -->
             <div>
-                <h3 class="text-xl font-semibold mb-4">Our Services</h3>
-                <ul class="space-y-3 text-gray-300">
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Our Services</h3>
+                <ul class="space-y-3 text-gray-300 text-center sm:text-left">
                     <li>
-                        <a href="care-clean.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="care-clean.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">home</span>
                             Care Clean
                         </a>
                     </li>
                     <li>
-                        <a href="deep-clean.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="deep-clean.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">cleaning_services</span>
                             Deep Cleaning
                         </a>
                     </li>
                     <li>
-                        <a href="recurring-clean.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="recurring-clean.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">schedule</span>
                             Recurring Clean
                         </a>
                     </li>
                     <li>
-                        <a href="move-in-out.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="move-in-out.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">moving</span>
                             Move In/Out Clean
                         </a>
                     </li>
                     <li>
-                        <a href="post-construction.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="post-construction.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">construction</span>
                             Post Construction
                         </a>
@@ -663,28 +660,28 @@
 
             <!-- QUICK LINKS -->
             <div>
-                <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
-                <ul class="space-y-3 text-gray-300">
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Quick Links</h3>
+                <ul class="space-y-3 text-gray-300 text-center sm:text-left">
                     <li>
-                        <a href="about.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="about.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">info</span>
                             About Us
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="contact.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">call</span>
                             Contact
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="contact.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">arrow_forward</span>
                             Book Now
                         </a>
                     </li>
                     <li>
-                        <a href="blog.html" class="flex items-center gap-2 hover:text-white transition-colors duration-300">
+                        <a href="blog.html" class="flex items-center justify-center sm:justify-start gap-2 hover:text-white transition-colors duration-300">
                             <span class="material-icons text-blue-400 text-lg">rss_feed</span>
                             Blog
                         </a>
@@ -692,43 +689,46 @@
                 </ul>
             </div>
 
-
             <!-- CONTACT INFO + FOLLOW US -->
             <div>
-                <h3 class="text-xl font-semibold mb-4">Contact Info</h3>
-                <ul class="space-y-3 text-gray-300 mb-6">
-                    <li class="flex items-center gap-2">
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Contact Info</h3>
+                <ul class="space-y-3 text-gray-300 mb-6 text-center sm:text-left">
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
                         <span class="material-icons text-blue-400">call</span>
                         <span>+1 (639) 382-1688</span>
                     </li>
-                    <li class="flex items-center gap-2">
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
                         <span class="material-icons text-blue-400">email</span>
                         <span>admin@wipedcleaningsrvcs.com</span>
                     </li>
-                    <li class="flex items-center gap-2">
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
                         <span class="material-icons text-blue-400">location_on</span>
                         <span>Regina, Saskatchewan, Canada</span>
                     </li>
-                    <li class="flex items-center gap-2">
+                    <li class="flex items-center justify-center sm:justify-start gap-2">
                         <span class="material-icons text-blue-400">schedule</span>
-                        <span>Business Hours: Monday - Sunday, 9:00 AM - 6:00 PM</span>
+                        <span>
+                            Business Hours:
+                            <span class="block">Monday - Sunday, 9:00 AM - 6:00 PM</span>
+                        </span>
                     </li>
                 </ul>
 
                 <!-- FOLLOW US -->
-                <h3 class="text-xl font-semibold mb-4">Follow Us</h3>
-                <div class="flex gap-4">
-                    <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
+                <h3 class="text-xl font-semibold mb-4 text-center sm:text-left">Follow Us</h3>
+                <div class="flex justify-center sm:justify-start gap-4 text-2xl md:text-3xl">
+                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300">
                         <span class="material-icons">facebook</span>
                     </a>
-                    <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
+                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300">
                         <span class="material-icons">photo_camera</span> <!-- Instagram -->
                     </a>
-                    <a href="#" class="text-gray-300 hover:text-white text-3xl transition-colors duration-300">
+                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300">
                         <span class="material-icons">public</span> <!-- X/Twitter -->
                     </a>
                 </div>
             </div>
+
         </div>
 
         <!-- COPYRIGHT -->
