Update for wiped repo

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -232,11 +232,11 @@
             </h3>
 
             <p class="text-lg md:text-xl text-gray-700">
-            A deep cleaning is more detailed than a regular clean and is usually done once or twice a year—like during spring or before a special occasion. It helps keep your home extra fresh and clean.
+            A deep cleaning is more detailed than a regular clean and is usually done once or twice a year like during spring or before a special occasion. It helps keep your home extra fresh and clean.
             </p>
 
             <p class="text-lg md:text-xl text-gray-700">
-            We focus on areas that collect dust over time, like baseboards, door frames, handles, and blinds—places that aren’t cleaned as often as floors or countertops. With more time and care, we make sure those easy to miss spots get the attention they need.
+            We focus on areas that collect dust over time, like baseboards, door frames, handles, and blinds places that aren’t cleaned as often as floors or countertops. With more time and care, we make sure those easy to miss spots get the attention they need.
             </p>
         </div>
     </section>
@@ -341,7 +341,7 @@
                 <div class="md:w-1/2 space-y-6">
                     <p class="text-gray-700 text-lg md:text-xl">
                         At WIPED Cleaning Services, we want you to be 100% happy with your cleaning. That’s why we offer a 
-                        <span class="font-semibold text-blue-800">200% happiness guarantee</span> — if something’s not right, we’ll fix it.
+                        <span class="font-semibold text-blue-800">200% happiness guarantee</span> if something’s not right, we’ll fix it.
                     </p>
                     
                     <ul class="space-y-2">
@@ -387,7 +387,7 @@
                     Getting started is easy. The best way to book your deep clean is through our website.
                 </p>
                 <p class="text-base md:text-lg text-gray-700">
-                    Not sure about booking online or just want to talk to a real person? Give us a call we’re happy to help with any questions, or just chat about your day (or your cat — we love pets too!).
+                    Not sure about booking online or just want to talk to a real person? Give us a call we’re happy to help with any questions, or just chat about your day (or your cat we love pets too!).
                 </p>
             </div>
 
@@ -397,7 +397,7 @@
                     How Often Should I Get a Deep Clean?
                 </h2>
                 <p class="text-base md:text-lg text-gray-700">
-                    Every home is different, so there’s no one-size-fits-all answer. It really depends on things like how many people or pets live in your home, how much foot traffic you get, and how often you clean in between.
+                    Every home is different, so there’s no one size fits all answer. It really depends on things like how many people or pets live in your home, how much foot traffic you get, and how often you clean in between.
                 </p>
                 <p class="text-base md:text-lg text-gray-700">
                     That said, we usually recommend getting a deep cleaning once or twice a year. A good rule of thumb:
@@ -424,7 +424,7 @@
                     How Much Does a Deep Clean Cost?
                 </h2>
                 <p class="text-base md:text-lg text-gray-700">
-                    Our deep cleaning services start at <span class="font-semibold">$249.35</span>. The final price depends on your home’s size, how many bedrooms and bathrooms you have, and if you want to add any extra services.
+                    Our deep cleaning services start at <span class="font-semibold">$200.00</span>. The final price depends on how many bedrooms and bathrooms you have, and if you want to add any extra services.
                 </p>
                 <p class="text-base md:text-lg text-gray-700">
                     Want a more exact price? Give us a call or check our online booking form for a quick estimate.
