--- a/recurring-clean.html
+++ b/recurring-clean.html
@@ -227,10 +227,10 @@
                     Life gets busy. Between work, family, and everything in between, keeping up with the constant cycle of cleaning can feel overwhelming.
                 </p>
                 <p class="text-gray-700 text-lg md:text-xl">
-                    That’s where recurring cleaning comes in. Whether you prefer weekly, bi-weekly, or monthly visits, having a trusted team consistently care for your home means one less thing on your never-ending to-do list.
+                    That’s where recurring cleaning comes in. Whether you prefer weekly, bi weekly, or monthly visits, having a trusted team consistently care for your home means one less thing on your never ending to do list.
                 </p>
                 <p class="text-gray-700 text-lg md:text-xl">
-                    Imagine walking into a home that always feels fresh, organized, and ready for you to enjoy—without the stress of scrambling to find time to clean. With recurring service, the mess never gets the chance to pile up.
+                    Imagine walking into a home that always feels fresh, organized, and ready for you to enjoy without the stress of scrambling to find time to clean. With recurring service, the mess never gets the chance to pile up.
                 </p>
                 <p class="text-gray-700 text-lg md:text-xl">
                     Leave the upkeep to the professionals at WIPED Cleaning Services, and free yourself up to focus on what truly matters. A consistently clean home is more than just tidy it’s peace of mind.
@@ -246,7 +246,7 @@
                 Why Get Recurring Cleaning Instead of Just a One-Time Cleaning?
             </h2>
             <p class="text-lg md:text-xl text-gray-700 text-center max-w-3xl mx-auto">
-                Recurring cleaning is the perfect service for keeping your home consistently fresh, healthy, and welcoming. Unlike a one-time or basic cleaning, recurring cleaning focuses on maintaining cleanliness over time, preventing the buildup of dust, dirt, and grime before it ever becomes overwhelming.
+                Recurring cleaning is the perfect service for keeping your home consistently fresh, healthy, and welcoming. Unlike a one time or basic cleaning, recurring cleaning focuses on maintaining cleanliness over time, preventing the buildup of dust, dirt, and grime before it ever becomes overwhelming.
             </p>
 
             <!-- Cards Grid -->
@@ -256,7 +256,7 @@
                 <div class="bg-white rounded-2xl shadow-lg p-6 hover:shadow-xl transition-all duration-300">
                     <h3 class="text-xl font-semibold text-blue-700 mb-3 flex items-center gap-2">
                         <span class="material-icons text-blue-700">cleaning_services</span>
-                        One-Time Cleaning Limitations
+                        One Time Cleaning Limitations
                     </h3>
                     <p class="text-gray-700 text-lg">
                         A standard one-time cleaning is great for a quick refresh, like wiping down countertops, cleaning floors, and tidying up bathrooms and kitchens. But dust, pet hair, fingerprints, and everyday messes naturally return over days and weeks.
@@ -270,7 +270,7 @@
                         Maintains Cleanliness Over Time
                     </h3>
                     <p class="text-gray-700 text-lg">
-                        Recurring cleaning ensures your home never reaches the “too messy” stage. Regular dusting, vacuuming, mopping, and sanitizing keep your home consistently clean and in top shape at all times—not just after occasional big cleans.
+                        Recurring cleaning ensures your home never reaches the “too messy” stage. Regular dusting, vacuuming, mopping, and sanitizing keep your home consistently clean and in top shape at all times not just after occasional big cleans.
                     </p>
                 </div>
 
@@ -281,7 +281,7 @@
                         Stress-Free Home
                     </h3>
                     <p class="text-gray-700 text-lg">
-                        With recurring cleaning, you’re not only saving time and energy but also creating a consistently clean and stress-free environment for you and your family.
+                        With recurring cleaning, you’re not only saving time and energy but also creating a consistently clean and stress free environment for you and your family.
                     </p>
                 </div>
 
@@ -353,7 +353,7 @@
                     </ul>
 
                     <p class="text-gray-700 text-lg md:text-xl mt-4">
-                        With recurring cleaning, mess and dust never get the chance to pile up—your home stays consistently clean and welcoming.
+                        With recurring cleaning, mess and dust never get the chance to pile up your home stays consistently clean and welcoming.
                     </p>
                 </div>
                 <div class="md:w-1/2">
@@ -395,7 +395,7 @@
 
             <!-- TEXT CONTENT -->
             <p class="text-gray-700 text-lg md:text-xl">
-                We know picking the perfect home cleaning company for your yearly spring cleaning can be tricky, and we probably missed some questions someone might have about home cleaning. If that’s the case, don’t worry — we are always here to help.
+                We know picking the perfect home cleaning company for your yearly spring cleaning can be tricky, and we probably missed some questions someone might have about home cleaning. If that’s the case, don’t worry we are always here to help.
             </p>
             <p class="text-gray-700 text-lg md:text-xl">
                 Call, text, or email us using our contact information below, and we’ll be happy to answer any additional questions and help schedule that yearly deep cleaning.
